# telemed

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api.md  conf.py  index.md  requirements.txt
src/telemed/: __init__.py  _comfree.py  _dispatch.py  _encode.py  _extract.py  _metadata_probe.py  _qc.py  _winperf.py  crop.py  export.py  log.py
tests/: conftest.py  test_comfree.py  test_dispatch.py  test_encode.py  test_export.py  test_init.py  test_log.py  test_metadata_probe.py  test_qc.py  test_winperf.py
